--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,35 +8,31 @@
 </head>
 <body class="page__body">
   <header class="page-header">
-  <a href="index.html" class="page-header__logo">
-    <picture>
-      <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg.svg">
-      <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg.svg">
-      <img src="img/logotype-mobile.svg.svg" alt="Логотип Седоны">
-    </picture>
-  </a>
-  <nav class="main-nav">
-    <button class="main-nav__toggle">
-      <span class="visually-hidden">Открыть меню</span>
-    </button>
-    <div class="main-nav__wrapper">
+    <a href="index.html" class="page-header__logo">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg.svg">
+        <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg.svg">
+        <img src="img/logotype-mobile.svg.svg" alt="Логотип Седоны">
+      </picture>
+    </a>
+    <nav class="page-header__main-nav main-nav main-nav--open main-nav--nojs">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню или скрыть открытое меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
-          <a href="index.html">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a>Фото и видео</a>
-        </li>
-        <li class="site-list__item site-list__item--active">
-          <a href="form.html">Форма Отзыва</a>
+          <a class="site-list__link site-list__link--active">Фото и видео</a>
         </li>
         <li class="site-list__item">
-          <a href="https://htmlacademy.ru/intensive/adaptive">Html academy</a>
+          <a class="site-list__link" href="form.html">Форма отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="https://htmlacademy.ru/">HTML Academy</a>
         </li>
       </ul>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
   <main class="page-main">
   <section class="intro">
     <svg width="229" height="39" viewBox="0 0 229 39" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -207,5 +203,21 @@
     </a>
   </div>
 </footer>
+<!-- <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+    
+    navMain.classList.remove('main-nav--nojs');
+    
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script> -->
 </body>
 </html>
